<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/openBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <Button
            android:id="@+id/shotBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

        <Button
            android:id="@+id/reBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore" />

        <Button
            android:id="@+id/preBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pretreat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/findBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find" />

        <Button
            android:id="@+id/workBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work" />

        <Button
            android:id="@+id/recBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recognize" />

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.61"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>